--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,80 @@
 body {
   font-family: "Poppins", sans-serif;
 }
+.header {
+  width: 100%;
+  height: 65px;
+  top: 0;
+  position: fixed;
+  display: flex;
+  align-items: center;
+  z-index: 1;
+  background-color: #f4c90c;
+}
+.container {
+  width: 1300px;
+  margin: 0 auto;
+}
+h1 {
+  color: #fff;
+}
+.main__body {
+  margin-top: 65px;
+}
+.innerbox {
+  width: 1200px;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  min-height: 100vh;
+}
+.main__note {
+  width: 100%;
+  text-align: center;
+  height: 100px;
+  position: relative;
+}
+.form {
+  margin-top: 10px;
+  width: 200px;
+  position: absolute;
+  top: 100px;
+  left: 50%;
+  transform: translate(-100px, -50%);
+}
+.txt {
+  width: 200px;
+  padding: 10px;
+  border: 0.5px solid #e5e5e5;
+  border-radius: 4px;
+}
+.txtarea {
+  width: 200px;
+  height: 100px;
+  margin-top: 10px;
+  border: 0.5px solid #e5e5e5;
+}
+.note {
+  background-color: #fff;
+  border-radius: 4px;
+  border: 0.5px solid #e7e7e7;
+  height: 120px;
+  width: 130px;
+  margin-right: 20px;
+}
+
+.btn {
+  border-radius: 50%;
+  background-color: #f4c90c;
+  color: #fff;
+}
+.footer {
+  width: 100%;
+  height: 40px;
+  display: flex;
+  bottom: 0;
+  justify-content: center;
+  align-items: center;
+  background-color: #e5e5e5;
+}
